--- a/nawaar-nc-knews/src/components/Header.css
+++ b/nawaar-nc-knews/src/components/Header.css
@@ -1,3 +1,43 @@
 .header {
     grid-area: header;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-areas: 'logo title user';
+        background-color: black;
+}
+
+.header h1 {
+    grid-area: title;
+    color: white;
+    font-size: 20px
+}
+
+.header .logo {
+    grid-area: logo;
+    width: 100%;
+    align-self: center
+}
+
+.header .user {
+    grid-area: user;
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 2fr;
+    grid-template-areas: 'avatar name' 'avatar username'
+}
+
+.header .user img {
+    grid-area: avatar;
+    width: 100%
+}
+
+.header .user #name {
+    grid-area: name;
+    color: red;
+    align-self: flex-end;
+    margin: 0px
+}
+
+.header .user #username {
+    grid-area: username;
+    color: red;
 }
