--- a/nawaar-nc-knews/src/components/Article.css
+++ b/nawaar-nc-knews/src/components/Article.css
@@ -1,15 +1,15 @@
 .articlePage .comment {
     text-align: left;
     display: block;
-    margin: 0px 100px;
+    margin: 0px 10%;
 }
 
 .articlePage h4 {
-    margin: 20px 100px;
+    margin: 20px 10%;
 }
 
 .articlePage form {
-    margin: 20px 100px;
+    margin: 20px 10%;
 }
 
 .articlePage form textarea {
@@ -20,6 +20,7 @@
 .articlePage {
     margin: 50px;
     text-align: left;
+    height: 100vh;
 }
 
 .articlePage .articleContent span .votesArtCom {
@@ -37,6 +38,7 @@
 
 .articlePage .articleContent span {
     display: grid;
+    grid-template-columns: 1fr 99fr;
     grid-template-areas: 'votes body';
     margin-bottom: 25px;
 }
