--- a/nawaar-nc-knews/src/components/ArticleForm.css
+++ b/nawaar-nc-knews/src/components/ArticleForm.css
@@ -10,12 +10,12 @@
  
 .articleForm input, textarea, select {
     float: left;
-    width: calc(100% - 200px);
+    width: 90%;
 }
  
 .articleForm button {
     float: right;
-    width: calc(100% - 200px);
+    width: 90%;
 }
 
 .articleForm label {
@@ -31,6 +31,6 @@ select {
 
 .articleForm {
     display: grid;
-    grid-template-columns: 200px 1fr;
-    grid-gap: 16px;
+    grid-template-columns: 20% 1fr;
+    grid-gap: 10px;
 }
